--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,31 +1,29 @@
-# This is a basic workflow that is manually triggered
-
 name: Run selenium test
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
     inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'run test'
-        # Default value if no value is explicitly provided
+      browser:
+        description: 'Choose browser'
         default: 'chrome'
-        # Input has to be provided for the workflow to run
         required: true
-        # The data type of the input
         type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  run-selenium:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: node test/brokenImages.js --browser ${{ chrome }}
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'  # Adjust if your script needs a different version
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run Selenium test
+      run: node test/brokenImages.js --browser ${{ github.event.inputs.browser }}
