--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,6 +8,9 @@ on:
         default: 'chrome'
         required: true
         type: string
+push:
+    branches:
+      - main
 
 jobs:
   run-selenium:
@@ -26,4 +29,5 @@ jobs:
       run: npm install
 
     - name: Run Selenium test
-      run: node test/brokenImages.js --browser ${{ github.event.inputs.browser }}
+      run:|
+          node test/brokenImages.js --browser ${{ github.event.inputs.browser || 'chrome' }}
