--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,5 +29,4 @@ jobs:
       run: npm install
 
     - name: Run Selenium test
-      run:|
-          node test/brokenImages.js --browser ${{ github.event.inputs.browser || 'chrome' }}
+      run: node test/brokenImages.js --browser ${{ github.event.inputs.browser || 'chrome' }}
