--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -35,12 +35,15 @@ jobs:
           changed_files=$(git diff --name-only origin/main HEAD | grep "^test/.*\.js$" || true)
           echo "Changed test files:"
           echo "$changed_files"
+          # Replace newlines with spaces for safe parsing
+          changed_files="${changed_files//$'\n'/ }"
           echo "files=$changed_files" >> $GITHUB_OUTPUT
 
       - name: Run changed Selenium tests
         if: steps.changed-files.outputs.files != ''
         run: |
           for file in ${{ steps.changed-files.outputs.files }}; do
-            echo "Running $file..."
-            node "$file" --browser ${{ github.event.inputs.browser || 'chrome' }}
+            echo "🔍 Running test file: $file"
+            set -e  # fail fast if any test fails
+            node "$file" --browser="${{ github.event.inputs.browser || 'chrome' }}"
           done
